k8s/kafdrop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
  namespace: smartlogix
  labels:
    app: kafdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
        - name: kafdrop
          image: obsidiandynamics/kafdrop:latest
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  namespace: smartlogix
spec:
  type: ClusterIP
  selector:
    app: kafdrop
  ports:
    - port: 9000
      targetPort: 9000
